// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`all-icons-dev-tool when rendered renders 1`] = `
<body>
  <div>
    <div
      class="overflow__y--scroll padding--l border__radius--l border__width--xxs border__color--grey60 border__style--solid backgroundColor--grey100"
      style="position: absolute; top: 50%; left: 50%; width: 800px; height: 500px; transform: translate(-50%, -50%); z-index: 999;"
    >
      <input
        class="width--full padding--xs border__radius--m border__width--xxs border__color--grey60 border__style--solid"
        data-icon-search-input-test="true"
        placeholder="Search..."
        type="text"
        value=""
      />
      <div
        class="flex flex__direction--horizontal flex__alignItems--center flex__justifyContent--center flex__gap--l margin__top--l"
        style="flex-wrap: wrap;"
      >
        <div
          class="border__radius--l border__width--xxs border__color--grey60 border__style--solid backgroundColor--grey80"
          data-icon-test="SomeIcon"
        >
          <div>
            Some Icon
          </div>
        </div>
        <div
          class="border__radius--l border__width--xxs border__color--grey60 border__style--solid backgroundColor--grey80"
          data-icon-test="SomeOtherIcon"
        >
          <div>
            Some Icon
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`all-icons-dev-tool when rendered when searching renders 1`] = `
<body>
  <div>
    <div
      class="overflow__y--scroll padding--l border__radius--l border__width--xxs border__color--grey60 border__style--solid backgroundColor--grey100"
      style="position: absolute; top: 50%; left: 50%; width: 800px; height: 500px; transform: translate(-50%, -50%); z-index: 999;"
    >
      <input
        class="width--full padding--xs border__radius--m border__width--xxs border__color--grey60 border__style--solid"
        data-icon-search-input-test="true"
        placeholder="Search..."
        type="text"
        value="other"
      />
      <div
        class="flex flex__direction--horizontal flex__alignItems--center flex__justifyContent--center flex__gap--l margin__top--l"
        style="flex-wrap: wrap;"
      >
        <div
          class="border__radius--l border__width--xxs border__color--grey60 border__style--solid backgroundColor--grey80"
          data-icon-test="SomeOtherIcon"
        >
          <div>
            Some Icon
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
